-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.493 2009-05-01 17:35:58 guru Exp $
-----------------------------------------------------------------------------------------

2009-05-01	pwessel
	* pslib.c:		Check if input arg eps == NULL before using this pointer
	
2009-04-30	pwessel
	* gmt_map.c:		Incorrectly used central longitude to set default midpoint for 3-D maps
				using the -E...+ mechanism when data were not geographic.

2009-04-29	remko
	* PSL_proogue.ps:	Changed "bind def" to "def" in function /FS. The "bind def" slowed
				things down significantly when there are a lot of color changes.
	* pslib.c:		Changed accordingly (PSL_prologue version number).

2009-04-27	pwessel
	* dbase/grdraster.c:	Added sanity check on file size.
	
2009-04-26	pwessel
	* grdinfo.c:		Now tells us in plain text what the grid format is.

2009-04-24	pwessel
	* gmtconvert.c:		Now has -g option.
	* mapproject.c:		Now has -g option.
	
2009-04-21	pwessel
	* ps2raster.c:		Reformatted the -W option to allow for a long list of KML-related
				settings.
	* imgsrc/img2google:	Updated to reflect new ps2raster -W usage.

2009-04-19	pwessel
	* grdcut.c:		New option -Z which is used to determine a rectangular subregion
				so that the rejected area have values entirely outside the given
				z-range.
2009-04-17	pwessel
	* gmt_*.c:		The gap check -g is now done inside the i/o library
	* gshhs/gshhs.c:	Checked wrong variable to test if a file was given.
	* gmt_customio.c:	In GMT_ras_read_grd_info, wrong size was passed to fread.
	* mgd77/mgd77list.c:	Used GMT_LONG in memset for an array allocated as int.

2009-04-16	pwessel
	* *.txt:		We now discuss -m rather than -M (but are backwards compatible)
	* job*:			All examples now use -m
	* *.tex, *.man:		All documentation now use -m

2009-04-16	remko
	* psclip.c, pscoast.c:	Produce at least "S V" when clippath is empty.